fixed div covering logo

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -6,7 +6,7 @@ h1 {
     font-style: italic;
     font-family: Geneva, Tahoma, sans-serif;
     position: relative;
-    top: -80px;
+    top: -35px;
 }
 
 #address-details-container {
