--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -19,7 +19,7 @@
 
 #logged_out {
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     /* left: 100%; */
     flex-direction: column;
     align-items: end;
